refactoring fix for overlapping divs on mobile

--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -6,6 +6,9 @@ header {
   @media only screen and (max-width: 1100px) {
     justify-content: center;
   }
+  @media only screen and (max-width: 900px) {
+   height: auto;
+    }
 }
 .main {
   display: flex;
@@ -68,10 +71,16 @@ header {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 60vh;
+ 
 
-  margin: 10rem;
+  margin: 10rem ;
   letter-spacing: 0.1rem;
+  @media only screen and (max-width: 600px) {
+  margin:20rem
+  }
+  @media only screen and (max-width: 320px) and (max-height: 470px){
+    margin:30rem
+    }
 }
 .headline {
   letter-spacing: .4rem;
