--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -32,6 +32,8 @@ a {
 }
 
 .headline-2 {
+  top: 10rem;
+  position: relative;
   font-weight: 600;
   font-size: 3rem;
   line-height: 5rem;
@@ -47,12 +49,14 @@ a {
   @media only screen and (max-width: 900px) {
     margin-top: 2rem;
     letter-spacing: 0.1rem;
+  
 
   }
   @media only screen and (max-width: 600px) {
     font-size: 2.4rem;
     line-height: 4rem;
     width: 70vw;
+  
 
   }
 }
@@ -75,81 +79,81 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  top: -20rem;
-  position: relative;
-  margin-bottom: -20rem;
-  @media only screen and (max-height: 550px) {
-    top: -15rem;
-    margin-bottom: -15rem;
+//   top: -20rem;
+//   position: relative;
+//   margin-bottom: -20rem;
+//   @media only screen and (max-height: 550px) {
+//     top: -15rem;
+//     margin-bottom: -15rem;
    
-  }
-  @media only screen and (max-height: 480px) {
-    top: -10rem;
-    margin-bottom: -10rem;
+//   }
+//   @media only screen and (max-height: 480px) {
+//     top: -10rem;
+//     margin-bottom: -10rem;
    
-  }
-  @media only screen and (max-height: 430px) {
-    top: -5rem;
-    margin-bottom: -5rem;
+//   }
+//   @media only screen and (max-height: 430px) {
+//     top: -5rem;
+//     margin-bottom: -5rem;
    
-  }
-  @media only screen and (max-height: 370px) {
-    top: 0rem;
-    margin-bottom: 0rem;
+//   }
+//   @media only screen and (max-height: 370px) {
+//     top: 0rem;
+//     margin-bottom: 0rem;
    
-  }
-  @media only screen and (max-width: 900px) {
-    top: -25rem;
-    margin-bottom: -25rem;
+//   }
+//   @media only screen and (max-width: 900px) {
+//     top: -25rem;
+//     margin-bottom: -25rem;
    
-  }
-  @media only screen and(max-width: 900px) and (max-height: 550px) {
-    top: -10rem;
-    margin-bottom: -10rem;
+//   }
+//   @media only screen and(max-width: 900px) and (max-height: 550px) {
+//     top: -10rem;
+//     margin-bottom: -10rem;
   
-    @media only screen and (max-height: 370px) {
-      top: -5rem;
-      margin-bottom: -5rem;
+//     @media only screen and (max-height: 370px) {
+//       top: -5rem;
+//       margin-bottom: -5rem;
      
-    }
-  }
-  @media only screen and (min-device-width: 320px) and (max-device-width: 568px) 
-and (-webkit-device-pixel-ratio: 2) and (device-aspect-ratio: 40/71)
-{
-  position: inherit;
-}
-  @media only screen and(max-width: 690px) and (max-height: 400px) {
-    top: -5rem;
-    margin-bottom: -5rem;
-    @media only screen and (max-height: 370px) {
-      top: 0rem;
-      margin-bottom: 0rem;
+//     }
+//   }
+//   @media only screen and (min-device-width: 320px) and (max-device-width: 568px) 
+// and (-webkit-device-pixel-ratio: 2) and (device-aspect-ratio: 40/71)
+// {
+//   position: inherit;
+// }
+//   @media only screen and(max-width: 690px) and (max-height: 400px) {
+//     top: -5rem;
+//     margin-bottom: -5rem;
+//     @media only screen and (max-height: 370px) {
+//       top: 0rem;
+//       margin-bottom: 0rem;
      
-    }
+//     }
   
-  }
+//   }
 
-  @media only screen and (max-width: 350px)  {
-    top: -10rem;
-    margin-bottom: -10rem;
-  }
-  @media only screen and (max-width: 350px)  and (max-height: 500px) {
-    top: -10rem;
-    margin-bottom: -10rem;
-    @media only screen and (max-height: 420px) {
-      top: -5rem;
-      margin-bottom: -5rem;
+//   @media only screen and (max-width: 350px)  {
+//     top: -10rem;
+//     margin-bottom: -10rem;
+//   }
+//   @media only screen and (max-width: 350px)  and (max-height: 500px) {
+//     top: -10rem;
+//     margin-bottom: -10rem;
+//     @media only screen and (max-height: 420px) {
+//       top: -5rem;
+//       margin-bottom: -5rem;
      
-    }
-  }
-  @media only screen and (max-width: 350px)  and (max-height: 385px) {
-    top: 0rem;
-    margin-bottom: 0rem;
-  }
-  @media only screen and (max-width: 320px)  and (max-height: 360px) {
-    top: 0rem;
-    margin-bottom: 0rem;
-  }
+//     }
+//   }
+//   @media only screen and (max-width: 350px)  and (max-height: 385px) {
+//     top: 0rem;
+//     margin-bottom: 0rem;
+//   }
+//   @media only screen and (max-width: 320px)  and (max-height: 360px) {
+//     top: 0rem;
+//     margin-bottom: 0rem;
+//   }
 }
 
 .benefits-container {
